--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -70,13 +70,13 @@ id = "UA-00000000-0"
 
 [languages]
 [languages.en]
-title = "Goldydocs"
-description = "A Docsy example site"
+title = "Catalyst Swarm"
+description = "Catalyst Swarm"
 languageName ="English"
 # Weight used for sorting.
 weight = 1
 [languages.no]
-title = "Goldydocs"
+title = "Catalyst Swarm"
 description = "Docsy er operativsystem for skyen"
 languageName ="Norsk"
 contentDir = "content/no"
