--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -83,14 +83,6 @@ contentDir = "content/no"
 time_format_default = "02.01.2006"
 time_format_blog = "02.01.2006"
 
-[languages.fa]
-title = "اسناد گلدی"
-description = "یک نمونه برای پوسته داکسی"
-languageName ="فارسی"
-contentDir = "content/fa"
-time_format_default = "2006.01.02"
-time_format_blog = "2006.01.02"
-
 [markup]
   [markup.goldmark]
     [markup.goldmark.renderer]
@@ -108,8 +100,8 @@ time_format_blog = "2006.01.02"
 section = ["HTML", "print", "RSS"]
 
 [params]
-copyright = "The Docsy Authors"
-privacy_policy = "https://policies.google.com/privacy"
+# copyright = "The Docsy Authors"
+# privacy_policy = "https://policies.google.com/privacy"
 
 # First one is picked as the Twitter card image if not set on page.
 # images = ["images/project-illustration.png"]
@@ -133,9 +125,9 @@ version = "0.0"
 url_latest_version = "https://example.com"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
-github_repo = "https://github.com/google/docsy-example"
+github_repo = "https://github.com/Catalyst-Swarm/catalyst-swarm.github.io"
 # An optional link to a related project repo. For example, the sibling repository where your product code lives.
-github_project_repo = "https://github.com/google/docsy"
+github_project_repo = "https://github.com/Catalyst-Swarm"
 
 # Specify a value here if your content directory is not in your repo's root directory
 # github_subdir = ""
@@ -178,8 +170,8 @@ sidebar_search_disable = false
 [params.ui.feedback]
 enable = true
 # The responses that the user sees after clicking "yes" (the page was helpful) or "no" (the page was not helpful).
-yes = 'Glad to hear it! Please <a href="https://github.com/PardusEidolon/example.github.io/issues/new/choose">tell us how we can improve</a>.'
-no = 'Sorry to hear that. Please <a href="https://github.com/PardusEidolon/example.github.io/issues/new/choose">tell us how we can improve</a>.'
+yes = 'Glad to hear it! Please <a href="https://github.com/Catalyst-Swarm/catalyst-swarm.github.io/issues/new/choose">tell us how we can improve</a>.'
+no = 'Sorry to hear that. Please <a href="https://github.com/Catalyst-Swarm/catalyst-swarm.github.io/issues/new/choose">tell us how we can improve</a>.'
 
 # Adds a reading time to the top of each doc.
 # If you want this feature, but occasionally need to remove the Reading time from a single page, 
@@ -190,17 +182,12 @@ enable = true
 [params.links]
 # End user relevant links. These will show up on left side of footer and in the community page if you have one.
 [[params.links.user]]
-	name = "User mailing list"
-	url = "https://example.org/mail"
-	icon = "fa fa-envelope"
-        desc = "Discussion and help from your fellow users"
-[[params.links.user]]
 	name ="Twitter"
-	url = "https://example.org/twitter"
+	url = "https://twitter.com/CatalystSwarm"
 	icon = "fab fa-twitter"
         desc = "Follow us on Twitter to get the latest news!"
 [[params.links.developer]]
 	name = "GitHub"
-	url = "https://github.com/google/docsy"
+	url = "https://github.com/Catalyst-Swarm"
 	icon = "fab fa-github"
-        desc = "Development takes place here!"
+        desc = "Governance development takes place here!"
